--- a/millionbridges/index.html
+++ b/millionbridges/index.html
@@ -10,6 +10,7 @@
 		body { font: 20px -apple-system, BlinkMacSystemFont, "SF", "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif, Calibri, Arial; color: #333; text-align: left; margin: 10% 20%;}
 		a { color: #ae0002; text-decoration: none; }
 		a:hover { text-decoration: underline; cursor: pointer;}
+		img { margin: 5% 0%; }
 	</style>
 </head>
 <body>
