--- a/millionbridges/index.html
+++ b/millionbridges/index.html
@@ -6,7 +6,6 @@
 	<link rel="shortcut icon" type="image/png" href="./fav.png">
 	<title>MillionBridges - Under Construction</title>
 	<style>
-		h1 { font: 34px -apple-system, BlinkMacSystemFont, "SF", "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif, Calibri, Arial;}
 		body { font: 20px -apple-system, BlinkMacSystemFont, "SF", "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif, Calibri, Arial; color: #333; text-align: left; margin: 10% 20%;}
 		a { color: #ae0002; text-decoration: none; }
 		a:hover { text-decoration: underline; cursor: pointer;}
@@ -15,10 +14,9 @@
 </head>
 <body>
 	<img src="./mblogo.png" alt="Million Bridges Logo">
-	<h1>Under Construction!</h1>
 	<div>
-		<p>Sorry for the inconvenience but the site is under construction. If you need to, you can always <a href="mailto:fadi@millionbridges.com">contact us</a>, otherwise please stay tuned!</p>
-		<p>&mdash; MillionBridges Team</p>
+		<p>MillionBridges, a Barcelona based fintech partners with Canadian financial services company RevoluPay, to bring to market a unique web-based tool that will help Lebanese living abroad channel their remittances to their family back home, in a safe and secure manner.</p>
+		<p>If you would like to say informed about our services, please <a href="mailto:fadi@millionbridges.com">contact us</a> to stay tuned!</p>
 	</div>
 </body>
 </html>
