--- a/millionbridges/index.html
+++ b/millionbridges/index.html
@@ -4,7 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="author" content="Ibrahim Zada">
 	<link rel="shortcut icon" type="image/png" href="./fav.png">
-	<title>MillionBridges - Under Construction</title>
+	<title>MillionBridges</title>
 	<style>
 		body { font: 20px -apple-system, BlinkMacSystemFont, "SF", "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif, Calibri, Arial; color: #333; text-align: left; margin: 10% 20%;}
 		a { color: #ae0002; text-decoration: none; }
@@ -16,7 +16,7 @@
 	<img src="./mblogo.png" alt="Million Bridges Logo">
 	<div>
 		<p>MillionBridges, a Barcelona based fintech partners with Canadian financial services company RevoluPay, to bring to market a unique web-based tool that will help Lebanese living abroad channel their remittances to their family back home, in a safe and secure manner.</p>
-		<p>If you would like to say informed about our services, please <a href="mailto:fadi@millionbridges.com">contact us</a> to stay tuned!</p>
+		<p>MillionBridges will launch its service in November 2020. If you would like to say informed about our services, please <a href="mailto:fadi@millionbridges.com">contact us</a> to stay tuned!</p>
 	</div>
 </body>
 </html>
