--- a/millionbridges/index.html
+++ b/millionbridges/index.html
@@ -6,14 +6,14 @@
 	<link rel="shortcut icon" type="image/png" href="./fav.png">
 	<title>MillionBridges</title>
 	<style>
-		body { font: 20px -apple-system, BlinkMacSystemFont, "SF", "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif, Calibri, Arial; color: #333; text-align: left; margin: 10% 20%;}
+		body { font: 20px -apple-system, BlinkMacSystemFont, "SF", "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif, Calibri, Arial; color: #333; text-align:justify; margin: 10% 20%;}
 		a { color: #ae0002; text-decoration: none; }
 		a:hover { text-decoration: underline; cursor: pointer;}
 		img { margin: 5% 0%; }
 	</style>
 </head>
 <body>
-	<img src="./mblogo.png" alt="Million Bridges Logo">
+	<img src="./mblogo.png" alt="MillionBridges Logo">
 	<div>
 		<p>MillionBridges, a Barcelona based fintech partners with Canadian financial services company RevoluPay, to bring to market a unique web-based tool that will help Lebanese living abroad channel their remittances to their family back home, in a safe and secure manner.</p>
 		<p>MillionBridges will launch its service in November 2020. If you would like to say informed about our services, please <a href="mailto:fadi@millionbridges.com">contact us</a> to stay tuned!</p>
