--- a/millionbridges/index.html
+++ b/millionbridges/index.html
@@ -16,7 +16,7 @@
 	<img src="./mblogo.png" alt="MillionBridges Logo">
 	<div>
 		<p>MillionBridges, a Barcelona based fintech partners with Canadian financial services company RevoluPay, to bring to market a unique web-based tool that will help Lebanese living abroad channel their remittances to their family back home, in a safe and secure manner.</p>
-		<p>MillionBridges will launch its service in November 2020. If you would like to say informed about our services, please <a href="mailto:fadi@millionbridges.com">contact us</a> to stay tuned!</p>
+		<p>MillionBridges will launch its service in November 2020. If you would like to stay informed about our services, please <a href="mailto:fadi@millionbridges.com">contact us</a> to stay tuned!</p>
 	</div>
 </body>
 </html>
