--- a/millionbridges/index.html
+++ b/millionbridges/index.html
@@ -7,8 +7,8 @@
 	<title>MillionBridges</title>
 	<style>
 		body { font: 20px -apple-system, BlinkMacSystemFont, "SF", "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif, Calibri, Arial; color: #333; text-align:justify; margin: 10% 20%;}
-		a { color: #ae0002; text-decoration: none; }
-		a:hover { text-decoration: underline; cursor: pointer;}
+		a { color: #ae0002; text-decoration: underline; }
+		a:hover { color: #333; text-decoration: none; cursor: pointer;}
 		img { margin: 5% 0%; }
 	</style>
 </head>
