--- a/millbrid/v1/index.html
+++ b/millbrid/v1/index.html
@@ -13,7 +13,7 @@
 	</style>
 </head>
 <body>
-	<img src="./mblogo.png" alt="MillionBridges Logo">
+	<img src="./mblogo.png" alt="MillionBridges Logo" style="width: 150px">
 	<div>
 		<p>MillionBridges, a Barcelona based fintech partners with Canadian financial services company RevoluPay, to bring to market a unique web-based tool that will help Lebanese living abroad channel their remittances to their family back home, in a safe and secure manner.</p>
 		<p>MillionBridges will launch its service in November 2020. If you would like to stay informed about our services, please <a href="mailto:fadi@millionbridges.com">contact us</a> to stay tuned!</p>
