--- a/millbrid/v1/index.html
+++ b/millbrid/v1/index.html
@@ -6,17 +6,41 @@
 	<link rel="shortcut icon" type="image/png" href="./fav.png">
 	<title>MillionBridges</title>
 	<style>
-		body { font: 20px -apple-system, BlinkMacSystemFont, "SF", "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif, Calibri, Arial; color: #333; text-align:justify; margin: 10% 20%;}
-		a { color: #ae0002; text-decoration: underline; }
-		a:hover { color: #ae0002; text-decoration: none; cursor: pointer;}
-		img { margin: 5% 0%; }
+		body { font: 20px -apple-system, BlinkMacSystemFont, "SF", "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif, Calibri, Arial; color: #515151; text-align:justify; margin: 10% 20%;}
+		a { color: #ae0002; text-decoration: none; }
+		a:hover { color: #ae0002; text-decoration: underline; cursor: pointer;}
+		img { margin: 1% 0% 5% 0%; width: 350px;}
+		.dot {
+			height: 10px;
+			width: 10px;
+			margin-left: 15px;
+			margin-right: 15px;
+			background-color: #515151;
+			border-radius: 50%;
+			display: inline-block;
+		}
+		.social {
+			font-size: 16px;
+		}
+
+		@media only screen and (max-width: 600px) {
+			body { 
+				margin: 10% 10%;
+			}
+			img {
+				margin: 15% 0% 5% 0%; width: 200px;
+			}
+		}
+
 	</style>
 </head>
 <body>
-	<img src="./mblogo.png" alt="MillionBridges Logo" style="width: 150px">
+	<img src="./mblogo.png" alt="MillionBridges Logo">
 	<div>
 		<p>MillionBridges, a Barcelona based fintech partners with Canadian financial services company RevoluPay, to bring to market a unique web-based tool that will help Lebanese living abroad channel their remittances to their family back home, in a safe and secure manner.</p>
 		<p>MillionBridges will launch its service in November 2020. If you would like to stay informed about our services, please <a href="mailto:fadi@millionbridges.com">contact us</a> to stay tuned!</p>
+		<br>
+		<p class="social"><a href="#">Facebook</a><span class="dot"></span><a href="#">Twitter</a><span class="dot"></span><a href="#">LinkedIn</a></p>
 	</div>
 </body>
 </html>
