--- a/millbrid/v1/index.html
+++ b/millbrid/v1/index.html
@@ -37,8 +37,8 @@
 <body>
 	<img src="./mblogo.png" alt="MillionBridges Logo">
 	<div>
-		<p>MillionBridges, a Barcelona based fintech partners with Canadian financial services company RevoluPay, to bring to market a unique web-based tool that will help Lebanese living abroad channel their remittances to their family back home, in a safe and secure manner.</p>
-		<p>MillionBridges will launch its service in November 2020. If you would like to stay informed about our services, please <a href="mailto:fadi@millionbridges.com">contact us</a> to stay tuned!</p>
+		<p>MillionBridges, a Barcelona based fintech company partnering with RevoluPay, the Canadian financial services company, to bring to market a unique web-based tool that will help Lebanese living abroad channel their remittances to their family back home, in a safe and secure manner.</p>
+		<p>We will launch our service in November 2020. If you would like to stay informed about our services, please <a href="mailto:fadi@millionbridges.com">contact us</a> to stay tuned!</p>
 		<br>
 		<p class="social"><a href="#">Facebook</a><span class="dot"></span><a href="#">Twitter</a><span class="dot"></span><a href="#">LinkedIn</a></p>
 	</div>
