--- a/millbrid/v1/index.html
+++ b/millbrid/v1/index.html
@@ -6,10 +6,11 @@
 	<link rel="shortcut icon" type="image/png" href="./fav.png">
 	<title>MillionBridges</title>
 	<style>
-		body { font: 20px -apple-system, BlinkMacSystemFont, "SF", "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif, Calibri, Arial; color: #515151; text-align:justify; margin: 10% 20%;}
+		body { font: 20px -apple-system, BlinkMacSystemFont, "SF", "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif, Calibri, Arial; color: #515151; text-align:justify; margin: 6% 20%;}
 		a { color: #ae0002; text-decoration: none; }
 		a:hover { color: #ae0002; text-decoration: underline; cursor: pointer;}
 		img { margin: 0% 0% 5% 0%; width: 350px;}
+		 h1 { font: 34px -apple-system, BlinkMacSystemFont, "SF", "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif, Calibri, Arial;}
 		.dot {
 			height: 10px;
 			width: 10px;
@@ -37,10 +38,11 @@
 <body>
 	<img src="./mblogo.png" alt="MillionBridges Logo">
 	<div>
+		<h1>Coming Soon!</h1>
 		<p>MillionBridges, a Barcelona based fintech company partnering with RevoluPay, the Canadian financial services company, to bring to market a unique web-based tool that will help Lebanese living abroad channel their remittances to their family back home, in a safe and secure manner.</p>
-		<p>We will launch our service in November 2020. If you would like to stay informed about our services, please <a href="mailto:fadi@millionbridges.com">contact us</a> to stay tuned!</p>
+		<p>We will launch our service in November 2020. If you would like to stay informed about our services, please <a href="mailto:info@millionbridges.com">contact us</a> to stay tuned!</p>
 		<br>
-		<p class="social"><a href="#">Facebook</a><span class="dot"></span><a href="#">Twitter</a><span class="dot"></span><a href="#">LinkedIn</a></p>
+		<p class="social"><a href="https://www.facebook.com/MillionBridges">Facebook</a><span class="dot"></span><a href="#">Twitter</a><span class="dot"></span><a href="https://www.instagram.com/millionbridges/">Instagram</a></p>
 	</div>
 </body>
 </html>
