--- a/millbrid/v1/index.html
+++ b/millbrid/v1/index.html
@@ -29,7 +29,7 @@
 				margin: 25% 10%;
 			}
 			img {
-				margin: 0% 0% 5% 0%; width: 200px;
+				margin: 0% 0% 5% 0%; width: 250px;
 			}
 		}
 
@@ -39,10 +39,10 @@
 	<img src="./mblogo.png" alt="MillionBridges Logo">
 	<div>
 		<h1>Coming Soon!</h1>
-		<p>MillionBridges, a Barcelona based fintech company partnering with RevoluPay, the Canadian financial services company, to bring to market a unique web-based tool that will help Lebanese living abroad channel their remittances to their family back home, in a safe and secure manner.</p>
+		<p>MillionBridges, a Barcelona based fintech company partnering with RevoluPay, the Canadian financial services company. Bringing to market a unique web-based tool that will help Lebanese living abroad channel their remittances to their family back home, in a safe and secure manner.</p>
 		<p>We will launch our service in November 2020. If you would like to stay informed about our services, please <a href="mailto:info@millionbridges.com">contact us</a> to stay tuned!</p>
 		<br>
-		<p class="social"><a href="https://www.facebook.com/MillionBridges">Facebook</a><span class="dot"></span><a href="#">Twitter</a><span class="dot"></span><a href="https://www.instagram.com/millionbridges/">Instagram</a></p>
+		<p class="social"><a href="https://www.facebook.com/MillionBridges">Facebook</a><span class="dot"></span><a href="https://www.instagram.com/millionbridges/">Instagram</a></p>
 	</div>
 </body>
 </html>
