--- a/millbrid/v1/index.html
+++ b/millbrid/v1/index.html
@@ -39,7 +39,7 @@
 	<img src="./mblogo.png" alt="MillionBridges Logo">
 	<div>
 		<h1>Coming Soon!</h1>
-		<p>MillionBridges, a Barcelona based fintech company partnering with RevoluPay, the Canadian financial services company. Bringing to market a unique web-based tool that will help Lebanese living abroad channel their remittances to their family back home, in a safe and secure manner.</p>
+		<p>MillionBridges, a Barcelona based Fintech company, is partnering with RevoluPay, the Canadian financial services company. Bringing to market a unique web-based tool, MILLIONBRIDGES WILL help Lebanese living abroad channel their remittances to their family back home, in a safe and secure manner.</p>
 		<p>We will launch our service in November 2020. If you would like to stay informed about our services, please <a href="mailto:info@millionbridges.com">contact us</a> to stay tuned!</p>
 		<br>
 		<p class="social"><a href="https://www.facebook.com/MillionBridges">Facebook</a><span class="dot"></span><a href="https://www.instagram.com/millionbridges/">Instagram</a></p>
