--- a/millbrid/v2/index.html
+++ b/millbrid/v2/index.html
@@ -23,7 +23,7 @@
 			<div class="display-table-cell">
 				<img src="./mblogo.png" alt="MillionBridges Logo">
 				<h1 class="title font-white"><b>Coming Soon</b></h1>
-				<p class="desc font-white">MillionBridges, a Barcelona based fintech company partnering with RevoluPay, the Canadian financial services company. Bringing to market a unique web-based tool that will help Lebanese living abroad channel their remittances to their family back home, in a safe and secure manner.</p>
+				<p class="desc font-white">MillionBridges, a Barcelona based Fintech company, is partnering with RevoluPay, the Canadian financial services company. Bringing to market a unique web-based tool, MILLIONBRIDGES WILL help Lebanese living abroad channel their remittances to their family back home, in a safe and secure manner.</p>
 
 				<p class="desc font-white">We will launch our service in November 2020. If you would like to stay informed about our services, please contact us or follow us on social media to stay tuned!</p>
 				
