--- a/millbrid/v1/index.html
+++ b/millbrid/v1/index.html
@@ -42,7 +42,7 @@
 		<p>MillionBridges, a Barcelona based Fintech company, is partnering with RevoluPay, the Canadian financial services company. Bringing to market a unique web-based tool, MILLIONBRIDGES WILL help Lebanese living abroad channel their remittances to their family back home, in a safe and secure manner.</p>
 		<p>We will launch our service in November 2020. If you would like to stay informed about our services, please <a href="mailto:info@millionbridges.com">contact us</a> to stay tuned!</p>
 		<br>
-		<p class="social"><a href="https://www.facebook.com/MillionBridges">Facebook</a><span class="dot"></span><a href="https://www.instagram.com/millionbridges/">Instagram</a></p>
+		<p class="social"><a href="https://www.facebook.com/MillionBridges">Facebook</a><span class="dot"></span><a href="https://www.instagram.com/millionbridges/">Instagram</a><span class="dot"></span><a href="#">Twitter</a><span class="dot"></span><a href="#">LinkedIn</a></p>
 	</div>
 </body>
 </html>
