--- a/millbrid/v2/index.html
+++ b/millbrid/v2/index.html
@@ -32,6 +32,8 @@
 				<ul class="social-btn font-white">
 					<li><a href="https://www.facebook.com/MillionBridges">Facebook</a></li>
 					<li><a href="https://www.instagram.com/">Instagram</a></li>
+					<li><a href="https://www.instagram.com/">Twitter</a></li>
+					<li><a href="#">LinkedIn</a></li>
 				</ul><!-- social-btn -->
 				
 			</div><!-- display-table -->
