--- a/millbrid/v1/index.html
+++ b/millbrid/v1/index.html
@@ -6,7 +6,7 @@
 	<link rel="shortcut icon" type="image/png" href="./fav.png">
 	<title>MillionBridges</title>
 	<style>
-		body { font: 20px -apple-system, BlinkMacSystemFont, "SF", "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif, Calibri, Arial; color: #515151; text-align:justify; margin: 6% 20%;}
+		body { font: 20px -apple-system, BlinkMacSystemFont, "SF", "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif, Calibri, Arial; color: #515151; text-align:justify; margin: 6% 20%; overflow: hidden;}
 		a { color: #ae0002; text-decoration: none; }
 		a:hover { color: #ae0002; text-decoration: underline; cursor: pointer;}
 		img { margin: 0% 0% 5% 0%; width: 350px;}
@@ -26,7 +26,7 @@
 
 		@media only screen and (max-width: 600px) {
 			body { 
-				margin: 25% 10%;
+				margin: 20% 10%;
 			}
 			img {
 				margin: 0% 0% 5% 0%; width: 250px;
