--- a/millbrid/v1/index.html
+++ b/millbrid/v1/index.html
@@ -31,6 +31,20 @@
 			img {
 				margin: 0% 0% 5% 0%; width: 250px;
 			}
+			h1 { font-size: 30px; }
+			body { font: 16px }
+			.social {
+				font-size: 14px;
+			}
+			.dot {
+				height: 5px;
+				width: 5px;
+				margin-left: 10px;
+				margin-right: 10px;
+				background-color: #515151;
+				border-radius: 50%;
+				display: inline-block;
+			}
 		}
 
 	</style>
@@ -39,7 +53,7 @@
 	<img src="./mblogo.png" alt="MillionBridges Logo">
 	<div>
 		<h1>Coming Soon!</h1>
-		<p>MillionBridges, a Barcelona based Fintech company, is partnering with RevoluPay, the Canadian financial services company. Bringing to market a unique web-based tool, MILLIONBRIDGES WILL help Lebanese living abroad channel their remittances to their family back home, in a safe and secure manner.</p>
+		<p>MillionBridges, a Barcelona based Fintech company, is partnering with RevoluPay, the Canadian financial services company. Bringing to market a unique web-based tool, MillionBridges will help Lebanese living abroad channel their remittances to their family back home, in a safe and secure manner.</p>
 		<p>We will launch our service in November 2020. If you would like to stay informed about our services, please <a href="mailto:info@millionbridges.com">contact us</a> to stay tuned!</p>
 		<br>
 		<p class="social"><a href="https://www.facebook.com/MillionBridges">Facebook</a><span class="dot"></span><a href="https://www.instagram.com/millionbridges/">Instagram</a><span class="dot"></span><a href="#">Twitter</a><span class="dot"></span><a href="#">LinkedIn</a></p>
