--- a/millbrid/v1/index.html
+++ b/millbrid/v1/index.html
@@ -7,6 +7,7 @@
 	<title>MillionBridges</title>
 	<style>
 		body { font: 20px -apple-system, BlinkMacSystemFont, "SF", "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif, Calibri, Arial; color: #515151; text-align:justify; margin: 6% 20%; overflow: hidden;}
+		p { font-size: 20px }
 		a { color: #ae0002; text-decoration: none; }
 		a:hover { color: #ae0002; text-decoration: underline; cursor: pointer;}
 		img { margin: 0% 0% 5% 0%; width: 350px;}
@@ -32,7 +33,7 @@
 				margin: 0% 0% 5% 0%; width: 250px;
 			}
 			h1 { font-size: 30px; }
-			body { font: 16px }
+			p { font-size: 18px }
 			.social {
 				font-size: 14px;
 			}
