--- a/millbrid/v2/index.html
+++ b/millbrid/v2/index.html
@@ -31,9 +31,9 @@
 				
 				<ul class="social-btn font-white">
 					<li><a href="https://www.facebook.com/MillionBridges">Facebook</a></li>
-					<li><a href="https://www.instagram.com/">Instagram</a></li>
-					<li><a href="https://www.instagram.com/">Twitter</a></li>
-					<li><a href="#">LinkedIn</a></li>
+					<li><a href="https://www.instagram.com/millionbridges/">Instagram</a></li>
+					<li><a href="https://twitter.com/MillionBridges">Twitter</a></li>
+					<li><a href="https://www.linkedin.com/company/67984820/">LinkedIn</a></li>
 				</ul><!-- social-btn -->
 				
 			</div><!-- display-table -->
