--- a/millbrid/v2/index.html
+++ b/millbrid/v2/index.html
@@ -30,10 +30,10 @@
 				<a class="notify-btn" href="info@millionbridges.com"><b>CONTACT US!</b></a>
 				
 				<ul class="social-btn font-white">
-					<li><a href="https://www.facebook.com/MillionBridges">Facebook</a></li>
-					<li><a href="https://www.instagram.com/millionbridges/">Instagram</a></li>
-					<li><a href="https://twitter.com/MillionBridges">Twitter</a></li>
-					<li><a href="https://www.linkedin.com/company/67984820/">LinkedIn</a></li>
+					<li><a href="https://www.facebook.com/MillionBridges" target="_blank">Facebook</a></li>
+					<li><a href="https://www.instagram.com/millionbridges/" target="_blank">Instagram</a></li>
+					<li><a href="https://twitter.com/MillionBridges" target="_blank">Twitter</a></li>
+					<li><a href="https://www.linkedin.com/company/67984820/" target="_blank">LinkedIn</a></li>
 				</ul><!-- social-btn -->
 				
 			</div><!-- display-table -->
