--- a/millbrid/v1/index.html
+++ b/millbrid/v1/index.html
@@ -10,8 +10,8 @@
 		p { font-size: 20px }
 		a { color: #ae0002; text-decoration: none; }
 		a:hover { color: #ae0002; text-decoration: underline; cursor: pointer;}
-		img { margin: 0% 0% 5% 0%; width: 350px;}
-		h1 { font: 34px -apple-system, BlinkMacSystemFont, "SF", "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif, Calibri, Arial;}
+		img { width: 350px; display: block; margin-left: auto; margin-right: auto; margin-bottom: 8%;}
+		h1 { font: 34px -apple-system, BlinkMacSystemFont, "SF", "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif, Calibri, Arial; text-align: center;}
 		.dot {
 			height: 10px;
 			width: 10px;
@@ -30,12 +30,12 @@
 				margin: 20% 10%;
 			}
 			img {
-				margin: 0% 0% 5% 0%; width: 250px;
+				width: 250px; display: block; margin-left: auto; margin-right: auto; margin-bottom: 15%;
 			}
 			h1 { font-size: 30px; }
-			p { font-size: 18px }
+			p { font-size: 16px }
 			.social {
-				font-size: 14px;
+				font-size: 12px;
 			}
 			.dot {
 				height: 5px;
