--- a/millbrid/v1/index.html
+++ b/millbrid/v1/index.html
@@ -10,8 +10,8 @@
 		p { font-size: 20px }
 		a { color: #ae0002; text-decoration: none; }
 		a:hover { color: #ae0002; text-decoration: underline; cursor: pointer;}
-		img { width: 350px; display: block; margin-left: auto; margin-right: auto; margin-bottom: 8%;}
-		h1 { font: 34px -apple-system, BlinkMacSystemFont, "SF", "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif, Calibri, Arial; text-align: center;}
+		img { width: 350px; display: block; margin-bottom: 8%;}
+		h1 { font: 34px -apple-system, BlinkMacSystemFont, "SF", "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif, Calibri, Arial;}
 		.dot {
 			height: 10px;
 			width: 10px;
