--- a/millbrid/v1/index.html
+++ b/millbrid/v1/index.html
@@ -32,7 +32,7 @@
 			img {
 				width: 250px; display: block; margin-left: auto; margin-right: auto; margin-bottom: 15%;
 			}
-			h1 { font-size: 30px; }
+			h1 { font-size: 30px; text-align: center;}
 			p { font-size: 14px }
 			.social {
 				font-size: 12px;
