--- a/millbrid/v2/index.html
+++ b/millbrid/v2/index.html
@@ -27,7 +27,7 @@
 
 				<p class="desc font-white">We will launch our service in November 2020. If you would like to stay informed about our services, please contact us or follow us on social media to stay tuned!</p>
 				
-				<a class="notify-btn" href="info@millionbridges.com"><b>CONTACT US!</b></a>
+				<a class="notify-btn" href="mailto:info@millionbridges.com"><b>CONTACT US!</b></a>
 				
 				<ul class="social-btn font-white">
 					<li><a href="https://www.facebook.com/MillionBridges" target="_blank">Facebook</a></li>
