--- a/millbrid/v2/index.html
+++ b/millbrid/v2/index.html
@@ -6,14 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
 	<meta name="author" content="Ibrahim Zada">
-	<link rel="shortcut icon" type="image/png" href="./fav.png">
+	<link rel="shortcut icon" type="image/png" href="./assets/fav.png">
 
 	<!-- Font -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700%7CPoppins:400,500" rel="stylesheet">
-	<link href="common-css/ionicons.css" rel="stylesheet">
-	<link rel="stylesheet" href="common-css/jquery.classycountdown.css" />
-	<link href="03-comming-soon/css/styles.css" rel="stylesheet">
-	<link href="03-comming-soon/css/responsive.css" rel="stylesheet">
+	<link href="./assets/styles.css" rel="stylesheet">
 </head>
 <body>
 	
@@ -21,7 +18,7 @@
 		
 		<div class="display-table">
 			<div class="display-table-cell">
-				<img src="./mblogo.png" alt="MillionBridges Logo">
+				<img src="./assets/mblogo.png" alt="MillionBridges Logo">
 				<h1 class="title font-white"><b>Coming Soon</b></h1>
 				<p class="desc font-white">MillionBridges, a Barcelona based Fintech company, is partnering with RevoluPay, the Canadian financial services company. Bringing to market a unique web-based tool, MillionBridges will help Lebanese living abroad channel their remittances to their family back home, in a safe and secure manner.</p>
 
