--- a/millbrid/v2/index.html
+++ b/millbrid/v2/index.html
@@ -8,6 +8,10 @@
 	<meta name="author" content="Ibrahim Zada">
 	<link rel="shortcut icon" type="image/png" href="./assets/fav.png">
 
+	<meta property="og:title" content="MillionBridges">
+    <meta property="og:image" content="./assets/og.png">
+    <meta property="og:description" name="description" content="MillionBridges, a Barcelona based Fintech company, is partnering with RevoluPay, the Canadian financial services company. Bringing to market a unique web-based tool, MillionBridges will help Lebanese living abroad channel their remittances to their family back home, in a safe and secure manner.">
+
 	<!-- Font -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700%7CPoppins:400,500" rel="stylesheet">
 	<link href="./assets/styles.css" rel="stylesheet">
