--- a/millbrid/v2/index.html
+++ b/millbrid/v2/index.html
@@ -3,18 +3,29 @@
 <head>
 	<title>MillionBridges</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
 	<meta name="author" content="Ibrahim Zada">
 	<link rel="shortcut icon" type="image/png" href="./assets/fav.png">
 
+	<!-- OG Tags -->
 	<meta property="og:title" content="MillionBridges">
-    <meta property="og:image" content="./assets/og.png">
-    <meta property="og:description" name="description" content="MillionBridges, a Barcelona based Fintech company, is partnering with RevoluPay, the Canadian financial services company. Bringing to market a unique web-based tool, MillionBridges will help Lebanese living abroad channel their remittances to their family back home, in a safe and secure manner.">
+	<meta property="og:image" content="./assets/og.png">
+	<meta property="og:description" name="description" content="MillionBridges, a Barcelona based Fintech company, is partnering with RevoluPay, the Canadian financial services company. Bringing to market a unique web-based tool, MillionBridges will help Lebanese living abroad channel their remittances to their family back home, in a safe and secure manner.">
 
 	<!-- Font -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700%7CPoppins:400,500" rel="stylesheet">
 	<link href="./assets/styles.css" rel="stylesheet">
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-177064246-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-177064246-1');
+	</script>
 </head>
 <body>
 	
