--- a/millbrid/index.html
+++ b/millbrid/index.html
@@ -78,7 +78,7 @@
 				  </div>
 				  <div class="formActions">
 					<input type="reset" value="Reset" class="primaryBtn">
-					<input type="submit" value="Submit" class="primaryBtn">
+					<input type="submit" value="Subscribe" class="primaryBtn">
 				  </div>
 				</div>
 			  </div>
@@ -86,7 +86,7 @@
 		</div>
 		
 		<a data-fancybox data-src="#contactForm" href="javascript:;"  class="notify-btn">
-			<b>CONTACT US!</b>
+			<b>STAY TUNED!</b>
 		</a>
 
 
