--- a/screen.html
+++ b/screen.html
@@ -41,7 +41,7 @@
   <script src="./assets/js/script.js"></script>
   <script>
   $(window).load(function () {
-            $(".loader").fadeOut("slow");
+            $("load").remove();
         });
 </script>
 </body>
