--- a/test.html
+++ b/test.html
@@ -13,9 +13,8 @@
         <!-- End of body-->
     </div>
     <script>
-      var preloader = document.getElementById('loader');
-      function preLoaderHandler(){
-          preloader.style.display = 'none';
-      }
+window.addEventListener(“load”, () => { 
+  document.getElementById(“loader”).style.display = “none”; 
+}); 
     </script>
 </body>
