--- a/campaigns/09022021.html
+++ b/campaigns/09022021.html
@@ -1,12 +1,12 @@
-<!doctype html>
+<!DOCTYPE HTML>
 
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Email Shot 4 | MeTHOD</title>
-  <meta name="description" content="">
-  <meta name="author" content="MeTHOD">
+  <title>Campaign</title>
+  <meta name="description" content="Email Shot">
+  <meta name="author" content="BXG">
 
   <style>
       * {padding: 0; margin: 0; font-family: Calibri, Arial; color: #313d45}
@@ -35,7 +35,7 @@
     <table class="main" cellpadding="0" cellspacing="0">
         <tr>
             <td class="header">
-                <img src="https://method-mca.com/mailshot/wk4/img/method-logo.png" alt="MeTHOD" />
+                <img src="https://stepstp-iz.github.io/campaigns/assets/mcaanalytics.png" alt="MeTHOD" />
             </td>
         </tr>
         <tr>
