--- a/campaigns/09022021.html
+++ b/campaigns/09022021.html
@@ -30,11 +30,11 @@
 
     ol li {
       padding: 5px;
-      margin-left: 35px;
+      margin-left: 18px;
       color: #fff;
     }
     ul li {
-      margin-left: 35px;
+      margin-left: 18px;
       color: #fff;
     }
 
@@ -59,7 +59,7 @@
     <tr>
       <td class="banner-B">
        <p style="text-align: center;"><strong>The New Improved MCA<sup>®</sup></strong></p>
-       <p>As someone who has used MCA<sup>®</sup> before, we want to give you an opportunity to try the new and much improved MCA Analytics product. It is simplified, action focused, delivered online, and available at much lower cost and faster than before. You will get straightforward answers to the following important questions:</p>
+       <p>As someone who has used MCA<sup>®</sup> before, we want to give you an opportunity to try the new and much improved MCA<sup>®</sup> Analytics product. It is simplified, action focused, delivered online, and available at much lower cost and faster than before. You will get straightforward answers to the following important questions:</p>
        <ol>
         <li>How is your brand performing during the pandemic?
           <ul>
