--- a/campaigns/09022021.html
+++ b/campaigns/09022021.html
@@ -47,7 +47,7 @@
   <table class="main" cellpadding="0" cellspacing="0">
     <tr>
       <td class="header" style="text-align: right">
-        <img src="https://stepstp-iz.github.io/campaigns/assets/mcaanalytics.png" width="40%" alt="MeTHOD"/>
+        <img src="https://stepstp-iz.github.io/campaigns/assets/mcaanalytics.png" width="40%" alt="logo"/>
       </td>
     </tr>
     <tr>
