--- a/campaigns/10022021.html
+++ b/campaigns/10022021.html
@@ -47,7 +47,7 @@
   <table class="main" cellpadding="0" cellspacing="0">
     <tr>
       <td class="header">
-        <p style="font-size: 20px;color: #fff;text-align: center;"><strong style="color: inherit;">Bounce Back in 2021 with</strong> <img src="https://stepstp-iz.github.io/campaigns/assets/mcaanalytics.png" width="150" style="margin-bottom: -16px;" alt="logo"/>
+        <p style="font-size: 20px;color: #fff;text-align: center;"><strong style="color: inherit;">Bounce Back in 2021 with</strong> <img src="https://stepstp-iz.github.io/campaigns/assets/mcaanalytics1.png" width="150" style="margin-bottom: -7px;" alt="MCA Analytics"/>
         </p>
       </td>
     </tr>
