--- a/campaigns/10022021.html
+++ b/campaigns/10022021.html
@@ -46,8 +46,8 @@
 <body>
   <table class="main" cellpadding="0" cellspacing="0">
     <tr>
-      <td class="header">
-        <p style="font-size: 20px;color: #fff;text-align: center;"><strong style="color: inherit;">Bounce Back in 2021 with</strong>&nbsp;<img src="https://stepstp-iz.github.io/campaigns/assets/mcaanalytics1.png" width="150" style="margin-bottom: -7px;" alt="MCA Analytics"/>
+      <td class="header" valign="middle">
+        <p style="font-size: 20px;color: #fff;text-align: center;"><strong style="color: inherit; position: relative; bottom: 7px;">Bounce Back in 2021 with</strong>&nbsp;<img src="https://stepstp-iz.github.io/campaigns/assets/mcaanalytics1.png" width="150" alt="MCA Analytics"/>
         </p>
       </td>
     </tr>
