updates from mike

--- a/campaigns/10022021.html
+++ b/campaigns/10022021.html
@@ -14,7 +14,7 @@
     .header {background: #2599cc}
     td {padding: 14px 15%;}
 
-    p {margin: 14px 0}
+    p {margin: 14px 0; font-size: 15px;}
     p.focus {color: #000000; font-weight: bold; margin-top: 50px}
     a.focus {color: #000000;}
     p.focusd {color: #ffffff; font-weight: bold; margin-top: 50px}
@@ -24,7 +24,7 @@
     td.banner-B {background: #2599cc;}
 
     td.banner p,td.banner-B p,td.banner-B strong {color: #fff;}
-    button {background: #000000; color: #fff; text-transform: uppercase; border: 0; padding: 8px 10px; font-size: 1.1em}
+    button {background: #000000; color: #fff; text-transform: uppercase; border: 0; padding: 8px 10px; font-size: 14px;}
 
     sup {color: inherit;}
 
@@ -32,10 +32,12 @@
       padding: 5px;
       margin-left: 10px;
       color: #fff;
+      font-size: 15px;
     }
     ul li {
       margin-left: 10px;
       color: #fff;
+      font-size: 15px;
     }
 
     table.sub {border-collapse: separate; border-spacing: 4px;}
@@ -74,31 +76,33 @@
         <br>
         It details the key questions it will help you answer to Bounce Back in 2021. 
         <br><br>
-        <a href="https://brandexperience-group.com/papers/MCA%20Analytics%20Deliverables.pdf"><img src="https://stepstp-iz.github.io/campaigns/assets/button1.png" width="100%" alt="button"></a>
+        <a style="color: inherit; font-size: 15px;" href="https://brandexperience-group.com/papers/MCA%20Analytics%20Deliverables.pdf">Download a Product Summary Description</a>&nbsp;<img src="https://stepstp-iz.github.io/campaigns/assets/icon4.png" width="18" alt="download">
       </p>
     </td>
   </tr>
   <tr>
     <td>
       <p style="font-weight: bold;">The Value of Sustainability: now available inside MCA<sup>®</sup></p>
-      <p>One of the biggest changes is the level of attention consumers are giving to sustainable and responsible behaviour by brands. They are now MUCH more likely to choose brands because they believe that they are genuinely committed to making positive contributions to society and the environment. MCA<sup>®</sup> now has a unique and powerful way to understand what motivates consumers, and to quantify the value of a brand’s sustainability narrative, which can be added as an additional module if needed.</p>
-      <br>
+      <p>One of the biggest changes is the level of attention consumers are giving to sustainable and responsible behaviour by brands. They are now MUCH more likely to choose brands because they believe that they are genuinely committed to making positive contributions to society and the environment. MCA<sup>®</sup> now has a unique and powerful way to understand what motivates consumers, and to quantify the value of a brand’s sustainability narrative, which can be added as an additional module if needed.
+        <br>
+      </p>
       <p>If you are interested to learn more, we are happy to arrange a short meeting to give you an overview of how it works, and we can explore the time and costs needed to get you up and running.</p>
       <p>Please get in touch by replying to the email, or through our <a href
-        ="https://brandexperience-group.com/index.aspx#Contact">website</a>.</p>
+        ="https://brandexperience-group.com/index.aspx#Contact">website</a>.
         <br>
-        <p>Best Regards,
-          <br>
-          <strong>{Contact.assignedUserName}</strong>
-        </p>
-      </td>
-    </tr>
-    <tr>
-      <td class="banner" style="background: #2599cc;font-size: 12px;">
-        <p style="color:#dedede">The Brand Experience Group</p>
-        <p style="color:#dedede">To unsubscribe, <a style="color:#dedede; text-decoration: none" href="{optOutUrl}">please click here.</a></p>
-      </td>
-    </tr>
-  </table>
+      </p>
+      <p>Best Regards,
+        <br>
+        <strong>{Contact.assignedUserName}</strong>
+      </p>
+    </td>
+  </tr>
+  <tr>
+    <td class="banner" style="background: #2599cc;">
+      <p style="color:#dedede; font-size: 12px;">The Brand Experience Group</p>
+      <p style="color:#dedede; font-size: 12px;">To unsubscribe, <a style="color:#dedede; text-decoration: none" href="{optOutUrl}">please click here.</a></p>
+    </td>
+  </tr>
+</table>
 </body>
 </html>
