--- a/campaigns/10022021.html
+++ b/campaigns/10022021.html
@@ -76,7 +76,7 @@
         <br>
         It details the key questions it will help you answer to Bounce Back in 2021. 
         <br><br>
-        <a style="color: inherit; font-size: 15px;" href="https://brandexperience-group.com/papers/MCA%20Analytics%20Deliverables.pdf">Download a Product Summary Description</a>&nbsp;<img src="https://stepstp-iz.github.io/campaigns/assets/icon4.png" width="18" alt="download">
+        <a style="color: #fff; text-decoration: underline; font-size: 15px;" href="https://brandexperience-group.com/papers/MCA%20Analytics%20Deliverables.pdf">Download a Product Summary Description</a>&nbsp;<img src="https://stepstp-iz.github.io/campaigns/assets/icon4.png" width="18" alt="download">
       </p>
     </td>
   </tr>
