--- a/campaigns/10022021.html
+++ b/campaigns/10022021.html
@@ -76,7 +76,7 @@
         <br>
         It details the key questions it will help you answer to Bounce Back in 2021. 
         <br><br>
-        <a style="color: #fff; text-decoration: underline; font-size: 15px;" href="https://brandexperience-group.com/papers/MCA%20Analytics%20Deliverables.pdf">Download a Product Summary Description</a>&nbsp;<img src="https://stepstp-iz.github.io/campaigns/assets/icon4.png" width="18" alt="download">
+        <a style="color: #fff; text-decoration: underline; font-size: 15px; font-weight: bold;" href="https://brandexperience-group.com/papers/MCA%20Analytics%20Deliverables.pdf">Download a Product Summary Description</a>&nbsp;<img src="https://stepstp-iz.github.io/campaigns/assets/icon4.png" width="18" alt="download">
       </p>
     </td>
   </tr>
@@ -87,7 +87,7 @@
         <br>
       </p>
       <p>If you are interested to learn more, we are happy to arrange a short meeting to give you an overview of how it works, and we can explore the time and costs needed to get you up and running.</p>
-      <p>Please get in touch by replying to the email, or through our <a href
+      <p>Please get in touch by replying to the email, or through our <a style="color: #000; text-decoration: underline; font-weight: bold;" href
         ="https://brandexperience-group.com/index.aspx#Contact">website</a>.
         <br>
       </p>
