--- a/signature.html
+++ b/signature.html
@@ -16,7 +16,7 @@
 
 	<br>
 
-	<span style="color: #1E70B7;">Teams: </span><span style="color: #666666;">izada@step-stp.com</span>
+	<span style="color: #1E70B7;">Skype: </span><span style="color: #666666;">i.zada</span>
 
 	<br><br><br>
 
