--- a/campaigns/webinar.html
+++ b/campaigns/webinar.html
@@ -50,6 +50,7 @@
             margin-top: 5px;
             font: 18px Calibri, Arial;
             color: #545D88;
+            text-align: center;
         }
 
         h1 {
