--- a/campaigns/webinar.html
+++ b/campaigns/webinar.html
@@ -48,7 +48,7 @@
 
         h2 {
             margin-top: 5px;
-            font: 18px Calibri, Arial;
+            font: bold 18px Calibri, Arial;
             color: #545D88;
             text-align: center;
         }
@@ -100,7 +100,7 @@
                         <br>
                         <a href="https://us06web.zoom.us/webinar/register/WN_gmaCLpC3SgKJrNg0EL0c4w" target="_blank"><img style="text-align: center;" class="large" src="https://stepstp-iz.github.io/campaigns/assets/buttonwebinar.png"></a>
                         <br><br>
-                        <p style="font-style: italic; color: #545D88; text-align: center;">Sustainability will be the driving force for business growth for the foreseeable future.</p>
+                        <p style="font-style: italic; color: #545D88; text-align: center; font-weight: bold;">Sustainability will be the driving force for business growth for the foreseeable future.</p>
                         <br><br>
                         This <span style="text-decoration: underline; color: #545D88;">FREE</span> one-hour webinar will cover how to move from CSR Sustainability to Sustainability as a <span style="color: #545D88;">Competitive Advantage</span>, including:
                         <br><br>
