--- a/campaigns/webinar.html
+++ b/campaigns/webinar.html
@@ -98,18 +98,18 @@
                             most important issue driving CPG & retail business growth.
                         </span>
                         <br>
-                        <a href="https://us06web.zoom.us/webinar/register/WN_gmaCLpC3SgKJrNg0EL0c4w" target="_blank"><img style="text-align: center;" class="large" src="https://stepstp-iz.github.io/campaigns/assets/buttonwebinar.png"></a>
+                        <a href="https://us06web.zoom.us/webinar/register/WN_gmaCLpC3SgKJrNg0EL0c4w" target="_blank"><img style="display: block; margin-left: auto; margin-right: auto; width: 129px;" src="https://stepstp-iz.github.io/campaigns/assets/buttonwebinar.png"></a>
                         <br><br>
                         <p style="font-style: italic; color: #545D88; text-align: center; font-weight: bold;">Sustainability will be the driving force for business growth for the foreseeable future.</p>
                         <br><br>
-                        This <span style="text-decoration: underline; color: #545D88;">FREE</span> one-hour webinar will cover how to move from CSR Sustainability to Sustainability as a <span style="color: #545D88;">Competitive Advantage</span>, including:
+                        This <span style="text-decoration: underline; color: #545D88; font-weight: bold;">FREE</span> one-hour webinar will cover how to move from CSR Sustainability to Sustainability as a <span style="color: #545D88; font-weight: bold;">Competitive Advantage</span>, including:
                         <br><br>
                         <ul>
-                            <li>The Definitive Food Retail Sustainability Business Case</li>
-                            <li>The Top 10 Mistakes Companies are Making with Sustainability Programs</li>
-                            <li>Consumer Insight: Sustainability as Preference Driver</li>
-                            <li>Best Practices for Developing a Strategic, Performance-Driven Sustainability Advantage</li>
-                            <li>Tools & Resources to Pressure Test Your Sustainability Results vs Your Activities</li>
+                            <li>The Definitive Food Retail <b>Sustainability Business Case</b></li>
+                            <li>The <b>Top 10 Mistakes</b> Companies are Making with Sustainability Programs</li>
+                            <li>Consumer Insight: Sustainability as <b>Preference Driver</b></li>
+                            <li>Best Practices for Developing a Strategic, <b>Performance-Driven</b> Sustainability Advantage</li>
+                            <li>Tools & Resources to <b>Pressure Test</b> Your Sustainability Results vs Your Activities</li>
                         </ul>
                         <br>
                         <span style="color: #545D88; font-weight: bold;">Brand Sustainability Solution™</span>
@@ -128,7 +128,7 @@
                         <br><br>
                         <h2>This may be the most important webinar you attend this year.</h2>
                         <br>
-                        <a href="https://us06web.zoom.us/webinar/register/WN_gmaCLpC3SgKJrNg0EL0c4w" target="_blank"><img style="text-align: center;" class="large" src="https://stepstp-iz.github.io/campaigns/assets/buttonwebinar.png"></a>
+                        <a href="https://us06web.zoom.us/webinar/register/WN_gmaCLpC3SgKJrNg0EL0c4w" target="_blank"><img style="display: block; margin-left: auto; margin-right: auto; width: 129px;" src="https://stepstp-iz.github.io/campaigns/assets/buttonwebinar.png"></a>
                         <br><br>
                         <span style="text-align: center; display: block;">
                             Attendance is Limited. 
