--- a/campaigns/webinar.html
+++ b/campaigns/webinar.html
@@ -75,7 +75,7 @@
         }
 
     </style>
-    <title>Season's Greeting</title>
+    <title>Mailshot</title>
 </head>
 <body>
     <div id="main">
