--- a/campaigns/webinar.html
+++ b/campaigns/webinar.html
@@ -85,7 +85,7 @@
                 <td align="left" style="padding-left: 50px; padding-right: 50px;">
 
                     <p>
-                        <img class="large" src="https://stepstp-iz.github.io/campaigns/assets/webinar1.png"> 
+                        <img class="large" src="https://brandexperience-group.com/campaigns/assets/webinar1.png"> 
                         <br><br>
                         <h1>Is Your Sustainability Readiness Evolving at the
                             <br>
@@ -98,7 +98,7 @@
                             most important issue driving CPG & retail business growth.
                         </span>
                         <br>
-                        <a href="https://us06web.zoom.us/webinar/register/WN_gmaCLpC3SgKJrNg0EL0c4w" target="_blank"><img style="display: block; margin-left: auto; margin-right: auto; width: 129px;" src="https://stepstp-iz.github.io/campaigns/assets/buttonwebinar.png"></a>
+                        <a href="https://us06web.zoom.us/webinar/register/WN_gmaCLpC3SgKJrNg0EL0c4w" target="_blank"><img style="display: block; margin-left: auto; margin-right: auto; width: 129px;" src="https://brandexperience-group.com/campaigns/assets/buttonwebinar.png"></a>
                         <br><br>
                         <p style="font-style: italic; color: #545D88; text-align: center; font-weight: bold;">Sustainability will be the driving force for business growth for the foreseeable future.</p>
                         <br><br>
@@ -116,19 +116,19 @@
                         <br>
                         Team Presenters:
                         <br>
-                        <img class="large" src="https://stepstp-iz.github.io/campaigns/assets/webinar2.png">
+                        <img class="large" src="https://brandexperience-group.com/campaigns/assets/webinar2.png">
                         <br><br>
                         <span style="color: #545D88; font-weight: bold;">Who Should Attend?</span>
                         <br>
-                        <img class="large" src="https://stepstp-iz.github.io/campaigns/assets/webinar3.png">
+                        <img class="large" src="https://brandexperience-group.com/campaigns/assets/webinar3.png">
                         <br><br>
                         <span style="color: #545D88; font-weight: bold;">The Sustainability Competitive Advantage webinar is hosted by:</span>
                         <br>
-                        <img class="large" src="https://stepstp-iz.github.io/campaigns/assets/webinar4.png">
+                        <img class="large" src="https://brandexperience-group.com/campaigns/assets/webinar4.png">
                         <br><br>
                         <h2>This may be the most important webinar you attend this year.</h2>
                         <br>
-                        <a href="https://us06web.zoom.us/webinar/register/WN_gmaCLpC3SgKJrNg0EL0c4w" target="_blank"><img style="display: block; margin-left: auto; margin-right: auto; width: 129px;" src="https://stepstp-iz.github.io/campaigns/assets/buttonwebinar.png"></a>
+                        <a href="https://us06web.zoom.us/webinar/register/WN_gmaCLpC3SgKJrNg0EL0c4w" target="_blank"><img style="display: block; margin-left: auto; margin-right: auto; width: 129px;" src="https://brandexperience-group.com/campaigns/assets/buttonwebinar.png"></a>
                         <br><br>
                         <span style="text-align: center; display: block;">
                             Attendance is Limited. 
