--- a/campaigns/webinar.html
+++ b/campaigns/webinar.html
@@ -36,14 +36,16 @@
 
         td {
             border: 0;
+            padding-left: 50px;
+            padding-right: 50px;
+            text-align: left;
         }
 
         .copy {
             display: block;
             text-decoration: none;
-            margin: 5px auto;
+            text-align: center;
             color: #666;
-            width: 100%;
         }
 
         h2 {
@@ -82,14 +84,13 @@
 
         <table style="width: 600px;">
             <tr>
-                <td align="left" style="padding-left: 50px; padding-right: 50px;">
+                <td>
 
-                    <p>
-                        <img class="large" src="https://brandexperience-group.com/campaigns/assets/webinar1.png"> 
+                        <img alt="photo" class="large" src="https://brandexperience-group.com/campaigns/assets/webinar1.png"> 
                         <br><br>
-                        <h1>Is Your Sustainability Readiness Evolving at the
+                        <h1>Is Your Sustainability Readiness Evolving at
                             <br>
-                            Speed of Consumers’ New Expectations?
+                            the Speed of Consumers’ New Expectations?
                         </h1>
                         <br>
                         <span style="font-weight: bold; text-align: center; display: block;">
@@ -98,7 +99,7 @@
                             most important issue driving CPG & retail business growth.
                         </span>
                         <br>
-                        <a href="https://us06web.zoom.us/webinar/register/WN_gmaCLpC3SgKJrNg0EL0c4w" target="_blank"><img style="display: block; margin-left: auto; margin-right: auto; width: 129px;" src="https://brandexperience-group.com/campaigns/assets/buttonwebinar.png"></a>
+                        <a href="https://us06web.zoom.us/webinar/register/WN_gmaCLpC3SgKJrNg0EL0c4w" target="_blank"><img alt="photo" style="display: block; margin-left: auto; margin-right: auto; width: 129px;" src="https://brandexperience-group.com/campaigns/assets/buttonwebinar.png"></a>
                         <br><br>
                         <p style="font-style: italic; color: #545D88; text-align: center; font-weight: bold;">Sustainability will be the driving force for business growth for the foreseeable future.</p>
                         <br><br>
@@ -116,19 +117,19 @@
                         <br>
                         Team Presenters:
                         <br>
-                        <img class="large" src="https://brandexperience-group.com/campaigns/assets/webinar2.png">
+                        <img alt="photo" class="large" src="https://brandexperience-group.com/campaigns/assets/webinar2.png">
                         <br><br>
                         <span style="color: #545D88; font-weight: bold;">Who Should Attend?</span>
                         <br>
-                        <img class="large" src="https://brandexperience-group.com/campaigns/assets/webinar3.png">
+                        <img alt="photo" class="large" src="https://brandexperience-group.com/campaigns/assets/webinar3.png">
                         <br><br>
                         <span style="color: #545D88; font-weight: bold;">The Sustainability Competitive Advantage webinar is hosted by:</span>
                         <br>
-                        <img class="large" src="https://brandexperience-group.com/campaigns/assets/webinar4.png">
+                        <img alt="photo" class="large" src="https://brandexperience-group.com/campaigns/assets/webinar4.png">
                         <br><br>
                         <h2>This may be the most important webinar you attend this year.</h2>
                         <br>
-                        <a href="https://us06web.zoom.us/webinar/register/WN_gmaCLpC3SgKJrNg0EL0c4w" target="_blank"><img style="display: block; margin-left: auto; margin-right: auto; width: 129px;" src="https://brandexperience-group.com/campaigns/assets/buttonwebinar.png"></a>
+                        <a href="https://us06web.zoom.us/webinar/register/WN_gmaCLpC3SgKJrNg0EL0c4w" target="_blank"><img alt="photo" style="display: block; margin-left: auto; margin-right: auto; width: 129px;" src="https://brandexperience-group.com/campaigns/assets/buttonwebinar.png"></a>
                         <br><br>
                         <span style="text-align: center; display: block;">
                             Attendance is Limited. 
@@ -137,14 +138,12 @@
                             <br>
                             A recording of the webinar will be made available to registrants.
                         </span>
-                    </p>
-                    <br>
-                    <tr>
-                        <td align="center">
-                            <span class="copy">&copy; 2022 <a href="http://brandexperience-group.com/" style="color: #666; text-decoration: underline;" target="_blank">The Brand Experience Group</a>. To unsubscribe, <a href=" {$unsubscribe}" style="color: #666; text-decoration: underline;" target="_blank">click here</a>.</span>
-                        </td>
-                    </tr>
-                </table>
-            </div>
-        </body>
-        </html>
+                        <br><br>
+                        <span class="copy">&copy; 2022 <a href="http://brandexperience-group.com/" style="color: #666; text-decoration: underline;" target="_blank">The Brand Experience Group</a>. To unsubscribe, <a href=" {$unsubscribe}" style="color: #666; text-decoration: underline;" target="_blank">click here</a>.</span>
+
+                </td>
+            </tr>
+        </table>
+    </div>
+</body>
+</html>
